--- a/OdeToFood/Pages/Restaurants/List.cshtml
+++ b/OdeToFood/Pages/Restaurants/List.cshtml
@@ -6,13 +6,11 @@
 
 <!DOCTYPE html>
 
-<html>
-<head>
+
     <meta name="viewport" content="width=device-width" />
     <title>List</title>
     
-</head>
-<body>
+
     <h1>Restaurants</h1>
 
     <form method="get">
@@ -21,7 +19,7 @@
                 <input type="search" class="form-control" asp-for="SearchTerm" />
                 <span class="input-group-btn">
                     <button class="btn btn-default">
-                        <i class="glyphicon glyphicon-search"></i> 
+                        <i class="glyphicon glyphicon-search"></i>
                     </button>
                 </span>
             </div>
@@ -30,26 +28,29 @@
 
     <table class="table">
         @foreach (var restaurant in Model.Restaurants)
-	        {
-                <tr>
-                    <td>@restaurant.Id</td>
-                    <td>@restaurant.Name</td>
-                    <td>@restaurant.Location</td>
-                    <td>@restaurant.Cusine</td>
-                    <td>
-                        <a class="btn btn-lg"
-                           asp-page="./Detail"
-                           asp-route-restaurantId="@restaurant.Id">
-                            <i class="glyphicon glyphicon-zoom-in"></i>
-                        </a>
-
-                    </td>
-                </tr>
-	        }        
+        {
+            <tr>
+                <td>@restaurant.Id</td>
+                <td>@restaurant.Name</td>
+                <td>@restaurant.Location</td>
+                <td>@restaurant.Cusine</td>
+                <td>
+                    <a class="btn btn-lg"
+                       asp-page="./Detail"
+                       asp-route-restaurantId="@restaurant.Id">
+                        <i class="glyphicon glyphicon-zoom-in"></i>
+                    </a>
+                    <a class="btn btn-lg"
+                       asp-page="./Edit"
+                       asp-route-restaurantId="@restaurant.Id">
+                        <i class="glyphicon glyphicon-edit"></i>
+                    </a>
+                </td>
+            </tr>
+        }
     </table>
 
-    <div>@Model.Message</div>
-    
+    <a asp-page=".\Edit" class="btn btn-primary">Add New</a>
 
-</body>
-</html>
+    <div>@Model.Message</div>
+
